--- a/layouts/partials/blogSummary.html
+++ b/layouts/partials/blogSummary.html
@@ -3,6 +3,7 @@
   <div class="publication-content mr-auto">
     <h3 class="mb-0"><a href="{{ .Permalink }}">{{ .Params.title }}</a></h3>
     <div>{{ .Summary | safeHTML }}</div>
+    <div class="pub-sum-link"><a href="{{ .Permalink }}">Continue reading ...</a></div>
     <p>{{ partial "techtags" . }}</p>
   </div>
   <div class="resume-date text-md-right">
